--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.18.1",
     "input-otp": "^1.2.4",
